Ignore Compiler Log

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,6 @@ ExportedObj/
 Icon?
 ehthumbs.db
 Thumbs.db
+Investigator of Things/Library/shadercompiler-UnityShaderCompiler.exe0.log
+Investigator of Things/Library/shadercompiler-UnityShaderCompiler.exe0.log
+*.log
