--- a/Investigator of Things/Assembly-CSharp.csproj
+++ b/Investigator of Things/Assembly-CSharp.csproj
@@ -79,10 +79,11 @@
     <Compile Include="Assets\Scripts\Interactions\InteractableObject.cs" />
     <Compile Include="Assets\Scripts\Inventory\InventoryItem.cs" />
     <Compile Include="Assets\Scripts\Inventory\InventoryManager.cs" />
-    <Compile Include="Assets\Scripts\Inventory\LogList.cs" />
+    <Compile Include="Assets\Scripts\Inventory\LogItem.cs" />
+    <Compile Include="Assets\Scripts\Inventory\LogManager.cs" />
     <Compile Include="Assets\Scripts\Player\Player.cs" />
-    <Compile Include="Assets\Scripts\UI_LiveOrRecording_Text.cs" />
-    <Compile Include="Assets\VolumeIcon_Change.cs" />
+    <Compile Include="Assets\Scripts\UI\UI_LiveOrRecording_Text.cs" />
+    <Compile Include="Assets\Scripts\UI\VolumeIcon_Change.cs" />
     <None Include="Assets\Shader\HighLight_Shader.shader" />
     <None Include="Assets\Shader\ProjectorAdditiveTint.shader" />
     <Reference Include="UnityEditor.StandardEvents">
