Going to start working on animations

--- a/Investigator of Things/Assembly-CSharp.csproj
+++ b/Investigator of Things/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Scripts\AI\InteractableGameObject.cs" />
     <Compile Include="Assets\Scripts\AI\MeleeAI.cs" />
     <Compile Include="Assets\Scripts\AI\MineArea.cs" />
+    <Compile Include="Assets\Scripts\AI\PlayerAI.cs" />
     <Compile Include="Assets\Scripts\AI\RangedAI.cs" />
     <Compile Include="Assets\Scripts\AI\Transporter.cs" />
     <Compile Include="Assets\Scripts\AI\WaypointSystem.cs" />
