--- a/Investigator of Things/Assembly-CSharp.csproj
+++ b/Investigator of Things/Assembly-CSharp.csproj
@@ -61,9 +61,11 @@
   <ItemGroup>
     <Compile Include="Assets\Animation\bloodEvent.cs" />
     <Compile Include="Assets\DeathPlane.cs" />
+    <Compile Include="Assets\DigitalClock.cs" />
     <Compile Include="Assets\Door.cs" />
     <Compile Include="Assets\Endmanager.cs" />
     <Compile Include="Assets\LoadEndScene.cs" />
+    <Compile Include="Assets\RemoveInspect.cs" />
     <Compile Include="Assets\SceneChange.cs" />
     <Compile Include="Assets\Scripts\AI\AI.cs" />
     <Compile Include="Assets\Scripts\AI\BomberAI.cs" />
